compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__externals__at_namespace_module.snap
---
source: compiler-core/src/javascript/tests/externals.rs
expression: "\n@external(javascript, \"@namespace/package\", \"inspect\")\nfn show(x: anything) -> Nil"
---
----- SOURCE CODE

@external(javascript, "@namespace/package", "inspect")
fn show(x: anything) -> Nil

----- COMPILED JAVASCRIPT
import { inspect as show } from "@namespace/package";
