compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__externals__erlang_bit_patterns.snap
---
source: compiler-core/src/javascript/tests/externals.rs
expression: "\npub fn should_not_be_generated(x) {\n  case x {\n    <<_, rest:bits>> -> rest\n    _ -> x\n  }\n}\n"
---
error: Unsupported feature for compilation target
  ┌─ /src/javascript/error.gleam:4:10
  │
4 │     <<_, rest:bits>> -> rest
  │          ^^^^^^^^^

This bit array segment option in patterns is not supported for JavaScript compilation.
