compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__externals__no_module.snap
---
source: compiler-core/src/javascript/tests/externals.rs
expression: "\n@external(javascript, \"\", \"one\")\npub fn one(x: Int) -> Int {\n  1\n}\n"
---
----- SOURCE CODE

@external(javascript, "", "one")
pub fn one(x: Int) -> Int {
  1
}


----- ERROR
error: Invalid JavaScript module
  ┌─ /src/one/two.gleam:3:1
  │
3 │ pub fn one(x: Int) -> Int {
  │ ^^^^^^^^^^^^^^^^^^^^^^^^^

The function `one` has an external JavaScript implementation but the module
path `` is not valid.
