compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__externals__pipe_variable_shadow.snap
---
source: compiler-core/src/javascript/tests/externals.rs
expression: "\n@external(javascript, \"module\", \"string\")\nfn name() -> String\n\npub fn main() {\n  let name = name()\n  name\n}\n"
---
----- SOURCE CODE

@external(javascript, "module", "string")
fn name() -> String

pub fn main() {
  let name = name()
  name
}


----- COMPILED JAVASCRIPT
import { string as name } from "module";

export function main() {
  let name$1 = name();
  return name$1;
}
